# Adafruit_Learning_System_Guides

./: .gitignore  .mailmap  .pylintrc  .travis.yml  CircuitPlaygroundExpress_AnalogIn.py  Glowing_Beehive_Wig  Jack_O_LED_trix\JackoLEDtrix\JackoLEDtrix.ino  README.md  REUSE.py  SPDX.py  SPDXer.py  arduino_libinstall  arduino_library_install  azure_gfx_helper.py  code.py  commit  has.txt  index.html  library.deps  missing.txt  pylint_check  pylint_check.sh  pylint_install  weathermeter_helper.py
.reuse/: dep5
16bit_hello_picowbell_dvi/: 16bit_hello_picowbell_dvi.ino
2020_shake/: 2020.h  2020_shake.ino  2021.h  2022.h  2023.h  2024.h  2025.h  2026.h
3D_Printed_Bionic_Eye/: .3D_Printed_Bionic_Eye.ino.swp  .3D_Printed_Bionic_Eye.py.swp  3D_Printed_Bionic_Eye.ino  3D_Printed_Bionic_Eye.py  README.md  code.py
3D_Printed_Daft_Punk_Helmet/: .3D_Printed_Daft_Punk_Helmet-Front-Animation.py.swp  .3D_Printed_Daft_Punk_Helmet-Side-Animation.ino.swp  .3D_Printed_Daft_Punk_Helmet-Side-Animation.py.swp  3D_Printed_Daft_Punk_Helmet-Front-Animation.ino  3D_Printed_Daft_Punk_Helmet-Front-Animation.py  3D_Printed_Daft_Punk_Helmet-Side-Animation.ino  3D_Printed_Daft_Punk_Helmet-Side-Animation.py  README.md
Adafruit_ESP32_Arduino_Demos/SerialESPPassthrough/serial_passthru_rp2040/: CMakeLists.txt  serial_passthrough.c
Magic_AI_Storybook/: README.md  book.py  bookprompt.txt  keys.txt  listener.py  make_shortcut.py  pyproject.toml  response.txt  response2.txt  story.py  storybook.desktop
Magic_AI_Storybook/magic_ai_storybook/: __init__.py  listener.py  make_shortcut.py  story.py
(+5671 files in other folders)
